--- a/public/style.css
+++ b/public/style.css
@@ -9,3 +9,17 @@
   .textField {
     color: red;
   }
+  #sendMessageButton{
+      cursor: pointer;
+  }
+  #chatbox{
+       border: 1px solid #CDCDCD;
+    overflow: auto;
+    width: 200px;
+    height: 200px;
+    
+    /* box-sizing */
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box
+  }
